# Syntax-Pilot

./: .gitignore
Admin-Panel/: package-lock.json
Admin-Panel/src/app/: layout.tsx
Backend-API/: commands.json  main.py  requirements.txt
Frontend-CLI/: Cargo.toml
Frontend-CLI/src/: main.rs
Primary-API/: onnx.py  query.py  requirements.txt  vectorizer.py
Vector-DB/: commands.json  test.py  vectorizer.py
