[package]
name = "frontend-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
ort = "1.16.3"
tokenizers = "0.15"
ndarray = "0.15"